[gd_scene load_steps=2 format=2]

[ext_resource path="res://views/lobby.gd" type="Script" id=1]

[node name="Lobby" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 600
custom_constants/margin_top = 400
custom_constants/margin_left = 600
custom_constants/margin_bottom = 400
script = ExtResource( 1 )

[node name="HostJoin" type="VBoxContainer" parent="."]
margin_left = 600.0
margin_top = 400.0
margin_right = 1320.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="HostJoin"]
margin_right = 720.0
margin_bottom = 14.0
text = "Multiplayer"
align = 1

[node name="Host" type="Button" parent="HostJoin"]
margin_top = 24.0
margin_right = 720.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Host"

[node name="Join" type="Button" parent="HostJoin"]
margin_top = 157.0
margin_right = 720.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Join"

[connection signal="pressed" from="HostJoin/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="HostJoin/Join" to="." method="_on_Join_pressed"]
